# kitchenware_classification_xception_model

./: .gitignore  README.md  fetch_data_from_kaggle.sh  pyproject.toml
kitchenware_model_api/app/: __init__.py  controller.py  main.py
kitchenware_model_package/kitchenware_model_package/: config.yml  predict.py
kitchenware_model_package/kitchenware_model_package/config/: core.py
research/: kitchenware_classification_efficientnet.ipynb  kitchenware_classification_efficientnet_model.ipynb  kitchenware_classification_xception.ipynb
