[tool.poetry]
name = "kitchenware_model_package"
version = "0.1.0"
description = "computer vision model - efficientnet for classifiying kitchen utensils"
authors = ["chibuikeeugene <chibuikeeugene@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
