[tool.poetry]
name = "kitchenware-classification-xception-model-api"
version = "0.1.0"
description = "The api for our kitchen ware model"
authors = ["chibuikeeugene <chibuikeeugene@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kitchenware-model-package = "0.0.4"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
